--- a/GroceryShoppingCart/GroceryShoppingCart.csproj
+++ b/GroceryShoppingCart/GroceryShoppingCart.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>2f24fd4b-5b4e-4d87-9b94-16d98206c223</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
