--- a/GroceryShoppingCart/appsettings.json
+++ b/GroceryShoppingCart/appsettings.json
@@ -12,7 +12,7 @@
     "Domain": "smtp.sendgrid.net",
     "Port": "587",
     "UsernameEmail": "michellesauder1",
-    "UsernamePassword": "Ms2733915",
+    "UsernamePassword": "Ms2733915!",
     "FromEmail": "mgsauder@hotmail.com",
     "ToEmail": "msauder3@learn.bcit.ca"
   },
